--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <img src="images/adam.jpg" alt="Adam">
   <img src="images/adam.jpg" alt="Avi">
-  <img src="images/spencer.jpg" alt="Spencer>
+  <img src="images/spencer.jpg" alt="Spencer">
 
 </body>
 </html>
